--- a/generators/app/package.json
+++ b/generators/app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "polymer-starter-kit-custom-build",
-  "version": "0.0.0",
+  "name": "polymer-starter-kit-plus-team",
+  "version": "0.1.0",
   "description": "A starting point for Polymer 1.0 custom build apps",
   "license": "BSD-3-Clause",
   "scripts": {
@@ -9,13 +9,18 @@
     "build": "gulp build"
   },
   "devDependencies": {
+    "browser-sync": "^2.18.6",
+    "connect-history-api-fallback": "^1.3.0",
+    "css-slam": "^1.2.1",
     "del": "^2.2.0",
     "eslint": "^3.12.0",
-    "eslint-config-google": "^0.7.0",
+    "eslint-config-google": "^0.7.1",
     "eslint-plugin-html": "^1.7.0",
     "gulp": "gulpjs/gulp#4.0",
+    "gulp-html-minifier": "^0.1.8",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^3.1.0",
+    "gulp-uglify": "^2.0.1",
     "merge-stream": "^1.0.0",
     "polymer-build": "^0.6.0"
   },
