--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "generator-polymer-init-custom-build",
-  "version": "2.0.1",
+  "name": "generator-polymer-init-plus-team",
+  "version": "0.1.0",
   "description": "A starting point for building apps using polymer-build",
   "authors": [
-    "The Polymer Authors"
+    "The +Team Devs"
   ],
   "keywords": [
     "yeoman-generator"
   ],
   "license": "BSD-3-Clause",
-  "repository": "PolymerElements/generator-polymer-init-custom-build",
+  "repository": "plusTTeam/generator-polymer-init-custom-build",
   "bugs": {
-    "url": "https://github.com/PolymerElements/generator-polymer-init-custom-build/issues"
+    "url": "https://github.com/plusTTeam/generator-polymer-init-custom-build/issues"
   },
   "main": "generators/app/index.js",
   "files": [
